# 3

./: README.md  pyproject.toml
.github/workflows/: browser-pages.yml  progress-site.yml  tests.yml
docs/: ADAPTIVE_TIME.md  COALITION_ELECTIONS.md  CONSTITUTIONAL_GOVERNMENT.md  EXECUTIVE_IMPLEMENTATION.md  GAME_DESIGN.md  LONG_TERM.md  M1_STATUS.md  NATIONAL_TEAM_COMMAND.md  NATIONAL_TEAM_MATCHDAY.md  OFFICE_CAUSALITY.md  PLAYER_PERSPECTIVE.md  POLITICAL_CAREERS_JUSTICE.md  ROADMAP.md  VISUAL_LANGUAGE.md  browser-governance-0.21.0.md
progress_site/: app.js  index.html  manifest.webmanifest  progress.json  service-worker.js  styles.css
progress_site/game/: .m18-placeholder  campaign-core.js  campaign-data.js  campaign-ui.js  index.html  live-core.js  live-data.js  live-ui.js  live.css  policy-core.js  policy-data.js  policy-fixes.js  policy.css  styles.css
scripts/: build_progress_site.py
src/football_republic/: __init__.py  adaptive_time.py  adaptive_time_significance.py  adaptive_time_web.py  advanced_ecosystem.py  advanced_webapp.py  campaign.py  career_webapp.py  causal_office_webapp.py  causal_president_career.py  chairman_career.py  chairman_webapp.py  cli.py  coalition_elections.py  coalition_runtime.py  coalition_webapp.py  constitutional.py  constitutional_webapp.py  domain.py  (+48 more)
tests/: test_adaptive_time.py  test_adaptive_time_significance.py  test_browser_demo.py  test_browser_workday.py  test_campaign.py  test_causal_office_webapp_structure.py  test_chairman_career.py  test_coalition_elections.py  test_constitutional.py  test_cups_contracts.py  test_deep_ecosystem.py  test_executive_followup.py  test_executive_office_webapp_structure.py  test_football.py  test_generational_economy.py  test_governance.py  test_long_term.py  test_national_team_command.py  test_office_causality.py  test_office_visual_polish.py  test_patronage_justice.py  test_political_economy.py  test_president_career.py  test_president_office_webapp_structure.py  test_presidential_office.py  test_progress_site.py  test_stadium_matchday.py  test_vertical_slice.py
