[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "football-republic"
version = "0.9.0"
description = "A national football governance simulator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shengtenghou4-star" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ui = [
  "streamlit>=1.40",
  "pandas>=2.2",
  "plotly>=5.24",
]

[project.scripts]
football-republic = "football_republic.cli:main"
football-republic-web = "football_republic.launch_web:main"
football-republic-deep = "football_republic.launch_deep:main"
football-republic-history = "football_republic.launch_history:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
